@@ -7,9 +7,6 @@ Legend:
 Plans for 0.4.0
 ===============
 
-  * Rename frconv to frconvert?
-  * Move frconv to timing (base)?
-
   New Features:
     [D] Partial support for SSA & ASS formats
     [D] Timing shift
